# JAF

./: .gitignore  LICENSE  README.md  pyproject.toml
jaf/: logger.py  utils.py
jaf/chunking/: __init__.py  base.py  basic_chunking.py
jaf/config/LLMConfig/: AnyscaleConfig.py  TogetherConfig.py  __init__.py  base.py
jaf/core/augment_prompt/: __init__.py  base.py  context.py
jaf/core/encode/: __init__.py  base.py  hf_encoder.py  hybrid_encoder.py  openai_encoder.py  sparse_encoder.py
jaf/core/llm/: __init__.py  anyscale.py  base.py  bedrock.py  default.py  localllm.py  openai.py  together.py
jaf/core/query/: __init__.py  rephrase.py
jaf/core/reranker/: __init__.py  fusion.py
jaf/core/semantic_router/: __init__.py  base.py  route_identifier.py  route_pipe.py  semantic_filter.py
jaf/db/: __init__.py
jaf/db/vector_db/: __init__.py
jaf/db/vector_db/qdrant/: __init__.py
jaf/parser/: __init__.py  docx_parser.py  google_doc.py  html.py  markdown.py  parser_base.py  pdf.py  rich_text.py  text.py  utils.py
jaf/parser/haskell_treesitter/: constants.py  treesitter.py  treesitter_hs.py  treesitter_registry.py  utils.py
jaf/pipeline/: __init__.py  base.py  hooks.py  type.py
jaf/pipeline/chat/: __init__.py  base.py  default.py
jaf/pipeline/code/: git_diff_reviewer.py
jaf/pipeline/code/comment_embed/: __init__.py  base.py
jaf/pipeline/code/fdep/: __init__.py  (+6 more)
jaf/pipeline/embed/: __init__.py  base.py  default.py  pipeline.py
jaf/pipeline/rag/: __init__.py  base.py
jaf/retriever/: parent_retriever.py
jaf/types/: __init__.py  common.py  tools.py
(+2 files in other folders)
